--- a/Recreate AdventureWorks.ipynb
+++ b/Recreate AdventureWorks.ipynb
@@ -16,15 +16,14 @@
     }
    },
    "source": [
-    "# Recreating the AdventureWorks database. \n",
+    "# Recreating the AdventureWorks database\n",
     "In this notebook, we perform all steps needed to \n",
     "1. clean out any previous iteration of the adventureworks database. \n",
     "2. download a zip file of the Adventure Works Database provided in parquet format. \n",
     "3. use that zip file to create tables in the `adventureworks` schema. \n",
     "\n",
-    "Due to the limitations of the Databricks Free edition, I do not seem to have the ability to create seperate workspaces required to properly create the seperate schemas needed for a proper AdventureWorks database. For this reason, all tables have the prefix of the correct schema, e.g., what should be `adventureworks.person.emailaddress` is can be found at `workspace.adventureworks.person_emailaddress`. I will call out later in the script where this script should be modified to properly create the schema. \n",
-    "\n",
-    "This script should be run whenever a user wants to create the `adventureworks` database within a databricks system workspace, or wants to recreate/reset the tables. "
+    "This script should be run whenever a user wants to create the `adventureworks` database for the first time or reset the all \n",
+    "tables. "
    ]
   },
   {
@@ -72,6 +71,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8a674755-9ef3-4293-bae7-2ab549578bd1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Cleanup and Recreate\n",
+    "In this first step, we begin by completely dropping and recreating the `adventureworks` catalog. This is going to simulate the sample database provided by Microsoft. This should be renamed to whatever database/catalog you wish to refer to."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -91,7 +110,8 @@
    "outputs": [],
    "source": [
     "%sql \n",
-    "use catalog workspace"
+    "DROP CATALOG IF EXISTS adventureworks CASCADE;\n",
+    "CREATE CATALOG adventureworks;"
    ]
   },
   {
@@ -103,130 +123,17 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "654a9cb2-670e-4654-9a40-08404a185292",
+     "nuid": "4ca9eb9e-1b4e-4680-85d4-67bfbec80aa9",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
     }
    },
    "source": [
-    "*Note*: The above cell needs to be changed depending on your catalog name. It likely is going to chage if you are able to create a catalog for `adventureworks`, you will likely also have the ability to create seperate schams, which is discussed more later. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "a05ddd1f-8484-4ab0-bed9-04e04ff6cbc6",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "## Clean-up\n",
-    "Next we grab all schemas related to adventureworks and drop them."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "1cc30cf1-2495-4723-a06e-18dea5f2a1ff",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "schemas = spark.sql('''\n",
-    "select schema_name\n",
-    "from `information_schema`.`schemata` \n",
-    "where schema_name like \"adventureworks%\"\n",
-    "limit 100;\n",
-    "''')\n",
+    "## Download Data\n",
+    "With the catalog set up We now have to create the volume filesystem for our flat files. We also initiate the download to get our pipeline moving along. The files used in this pipeline were provided by [Michael Olafusi (olafusimichael/AdventureWorksParquet)](https://github.com/olafusimichael/AdventureWorksParquet).\n",
     "\n",
-    "for schema in _sqldf.collect():\n",
-    "    spark.sql(f'''DROP SCHEMA IF EXISTS {schema.schema_name} CASCADE''')\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "fa810a2e-1b8f-405a-9dbc-77bd44722aed",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "## Recreating Schema and Volume\n",
-    "Next, we recreate the namespaces used by this script. Specifcaly, we create the `adventureworks`, set it to the default, then create a volume within that schema to store the raw data files we are going to be using. \n",
-    "*Note*: This is one of the areas that you can change if are using multiple catalogs. If you can create a `adventureworks` catalog, you would be able to create seperate schemas for each schema as defined by the original AdventureWorks sample database. This script would change, depending on that ability. "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "implicitDf": true,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "4843aa65-dd94-431c-aadb-6375003ccf29",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "%sql\n",
-    "CREATE SCHEMA adventureworks;\n",
-    "USE SCHEMA adventureworks;\n",
-    "CREATE VOLUME adventureworks.raw_data;"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "9c16d31f-bbc2-4227-a33d-677f327004b2",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "Next, we set a handful of variables we will be using to store files. \n",
-    "*Note*: If you have the ability to create seperate catalogs, make sure you change your paths here as well.  "
+    "All these values should be renamed if using a different naming convention. "
    ]
   },
   {
@@ -247,32 +154,17 @@
    },
    "outputs": [],
    "source": [
-    "schema = 'adventureworks'\n",
-    "volume = 'raw_data'\n",
+    "catalog = 'adventureworks'\n",
+    "schema = 'default'\n",
+    "volume = 'adventureworks_parquet'\n",
     "url = 'https://github.com/olafusimichael/AdventureWorksParquet/archive/main.zip'\n",
-    "workspace_dir = f'/Volumes/workspace/{schema}/raw_data'\n",
-    "# parquet_dir = f'{workspace_dir}'\n",
+    "workspace_dir = f'/Volumes/{catalog}/{schema}/{volume}'\n",
     "zip_path = f'{workspace_dir}/main.zip'\n",
-    "# dbutils.fs.mkdirs(parquet_dir)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "676d60d3-f2e9-47b6-8eab-b92453fc0f28",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "At this point, we download the zip file, as provided by [Michael Olafusi (olafusimichael)](https://github.com/olafusimichael/AdventureWorksParquet) and save all data to our newly created volume."
+    "\n",
+    "spark.sql(\n",
+    "    f\"\"\"\n",
+    "    CREATE VOLUME IF NOT EXISTS {catalog}.{schema}.{volume}\n",
+    "    \"\"\")"
    ]
   },
   {
@@ -293,9 +185,9 @@
    },
    "outputs": [],
    "source": [
-    "with open(f'{workspace_dir}/main.zip', 'wb') as f:\n",
+    "with open(zip_path, 'wb') as f:\n",
     "    f.write(requests.get(url).content)\n",
-    "with zipfile.ZipFile(f'{workspace_dir}/main.zip', 'r') as zip_ref:\n",
+    "with zipfile.ZipFile(zip_path, 'r') as zip_ref:\n",
     "    zip_ref.extractall(workspace_dir)"
    ]
   },
@@ -340,9 +232,11 @@
     "parquet_dir = f'{workspace_dir}/AdventureWorksParquet-main'\n",
     "for file in dbutils.fs.ls(parquet_dir):\n",
     "    if file.name.endswith('.parquet'):\n",
-    "        table_name = file.name.replace('.parquet', '').replace(\".\", \"_\")\n",
+    "        table_name = file.name.replace('.parquet', '')\n",
+    "        schema_name = table_name.split('.')[0]\n",
+    "        spark.sql(f'CREATE SCHEMA IF NOT EXISTS {catalog}.{schema_name}')\n",
     "        df = spark.read.parquet(file.path)\n",
-    "        df.write.mode('overwrite').saveAsTable(f'{schema}.{table_name}')"
+    "        df.write.mode('overwrite').saveAsTable(f'{catalog}.{table_name}')"
    ]
   },
   {
@@ -361,13 +255,19 @@
     }
    },
    "source": [
-    "Once completed, you should be able to see all the tables in the `adventureworks` schema of your workspace. "
+    "Once completed, you should be able to see all the tables in the `adventureworks` catalog of your workspace, inside their respective schemas. This will effectively turn the `adventureworks` catalog into a sample database for any further queries. This verison of the database does lack, any simblance of partitions, indicies, primary and foreign keys, constraints, and many other standard database features. These could likely be included, especially if utilizing the upcoming [Lakebase](https://docs.databricks.com/aws/en/oltp) feature I found, but more efford would need to be put into importing these files, which is not the point of this repo and its exercises. "
    ]
   }
  ],
  "metadata": {
   "application/vnd.databricks.v1+notebook": {
-   "computePreferences": null,
+   "computePreferences": {
+    "hardware": {
+     "accelerator": null,
+     "gpuPoolId": null,
+     "memory": null
+    }
+   },
    "dashboards": [],
    "environmentMetadata": {
     "base_environment": "",
@@ -377,7 +277,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 4862064725444787,
+     "commandId": 4862064725444785,
      "dataframes": [
       "_sqldf"
      ]
