Moved Notebook Location
Moved location of the two notebooks for better organization. Alsop added the Employees table to the database creation, which was missing from the parquet files.

--- a/notebooks/Recreate AdventureWorks.ipynb
+++ b/notebooks/Recreate AdventureWorks.ipynb
@@ -248,6 +248,209 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
+     "nuid": "be2590b7-eb5a-4e99-bde7-4db0564af662",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "### Adding missing files\n",
+    "A couple files seem to be missing from the above mentioned parquet dataset. Therefore, I'll be importing the 2022 version of the CSV files from microsoft and add them in as I need more tables for the data warehouse.\n",
+    "I've attempted to create these from the provided install scripts inside the zip file provided by microsoft below. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "c970ca8f-a9b9-4915-933a-b5174bfd0fbf",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.sql(\n",
+    "    f'''\n",
+    "    CREATE VOLUME IF NOT EXISTS {catalog}.{schema}.csv_files\n",
+    "    ''')\n",
+    "csv_url = 'https://github.com/Microsoft/sql-server-samples/releases/download/adventureworks/AdventureWorks-oltp-install-script.zip'\n",
+    "csv_workspace_dir = f'/Volumes/{catalog}/{schema}/csv_files'\n",
+    "zip_path_csv = f'{csv_workspace_dir}/AdventureWorksCSV.zip'    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "3f3e0277-8242-4ea6-9600-48fb5ba32f8d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "with open(zip_path_csv, 'wb') as f:\n",
+    "    f.write(requests.get(csv_url).content)\n",
+    "with zipfile.ZipFile('/Volumes/adventureworks/default/csv_files/AdventureWorksCSV.zip', 'r') as zip_ref:\n",
+    "    zip_ref.extractall(csv_workspace_dir) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "b26f6bea-a66f-4181-846c-db89fd10d2fe",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df_schema = StructType([\n",
+    "    StructField('EmployeeID', IntegerType(), True),\n",
+    "    StructField('NationalIDNumber', StringType(), True),\n",
+    "    StructField('LoginID', StringType(), True),\n",
+    "    StructField('OrganizationNode', StringType(), True),\n",
+    "    StructField('OrganizationLevel', IntegerType(), True),\n",
+    "    StructField('JobTitle', StringType(), True),\n",
+    "    StructField('BirthDate', DateType(), True),\n",
+    "    StructField('MaritalStatus', StringType(), True),\n",
+    "    StructField('Gender', StringType(), True),\n",
+    "    StructField('HireDate', DateType(), True),\n",
+    "    StructField('SalariedFlag', IntegerType(), True),\n",
+    "    StructField('VacationHours', IntegerType(), True),\n",
+    "    StructField('SickLeaveHours', IntegerType(), True),\n",
+    "    StructField('CurrentFlag', IntegerType(), True),\n",
+    "    StructField('rowguid', StringType(), True),\n",
+    "    StructField('ModifiedDate', DateType(), True)\n",
+    "])\n",
+    "\n",
+    "df = spark.read.csv(f'{csv_workspace_dir}/Employee.csv',header=False,schema=df_schema,inferSchema=True,sep='\\t',encoding='utf-16')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "4f217445-fb6c-42e2-87e4-4b1b0dcbb6af",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "df.display(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a5ac29b6-8ba6-499a-aa94-c6c837214486",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "spark.sql(\"DROP TABLE IF EXISTS adventureworks.humanresources.employee\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "ea2cc1bb-f4b0-4b5a-9b0c-f7498c687323",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "df.write.mode('overwrite').saveAsTable(\"adventureworks.humanresources.employee\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "7e1ec415-1f1c-4711-84fe-a19872d46c46",
+     "showTitle": false,
+     "tableResultSettingsMap": {
+      "0": {
+       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1755029955399}",
+       "filterBlob": null,
+       "queryPlanFiltersBlob": null,
+       "tableResultIndex": 0
+      }
+     },
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql \n",
+    "select * from adventureworks.humanresources.employee"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
      "nuid": "bbed0d5f-eeaf-414c-b5da-85b8fe2642f6",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -277,7 +480,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 4862064725444785,
+     "commandId": 5041068088577523,
      "dataframes": [
       "_sqldf"
      ]
