quick quality check
a quick quality check to make sure all rows got inserted

--- a/notebooks/Recreate AdventureWorks.ipynb
+++ b/notebooks/Recreate AdventureWorks.ipynb
@@ -358,28 +358,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "4f217445-fb6c-42e2-87e4-4b1b0dcbb6af",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "df.display(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "a5ac29b6-8ba6-499a-aa94-c6c837214486",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -419,27 +397,18 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
-      "implicitDf": true,
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "7e1ec415-1f1c-4711-84fe-a19872d46c46",
+     "nuid": "39a607d6-3c5e-4efa-896c-d1c3b6f581b0",
      "showTitle": false,
-     "tableResultSettingsMap": {
-      "0": {
-       "dataGridStateBlob": "{\"version\":1,\"tableState\":{\"columnPinning\":{\"left\":[\"#row_number#\"],\"right\":[]},\"columnSizing\":{},\"columnVisibility\":{}},\"settings\":{\"columns\":{}},\"syncTimestamp\":1755029955399}",
-       "filterBlob": null,
-       "queryPlanFiltersBlob": null,
-       "tableResultIndex": 0
-      }
-     },
+     "tableResultSettingsMap": {},
      "title": ""
     }
    },
    "outputs": [],
    "source": [
-    "%sql \n",
-    "select * from adventureworks.humanresources.employee"
+    "spark.sql(\"select EmployeeID from adventureworks.humanresources.employee\").count() == df.count()"
    ]
   },
   {
