--- a/queries/dim_department_group.dbquery.ipynb
+++ b/queries/dim_department_group.dbquery.ipynb
@@ -18,9 +18,11 @@
    },
    "outputs": [],
    "source": [
-    "--dim_department_group\n",
+    "--dim_department_group \n",
+    "-- TBD Cannot figure it out right now\n",
     "SELECT * FROM humanresources.department\n",
-    "order by GroupName"
+    "where GroupName = 'Executive General and Administration'\n",
+    "order by GroupName\n"
    ]
   }
  ],
@@ -32,6 +34,7 @@
    "inputWidgetPreferences": null,
    "language": "sql",
    "notebookMetadata": {
+    "pythonIndentUnit": 4,
     "sqlQueryOptions": {
      "applyAutoLimit": true,
      "catalog": "adventureworks",
