refactor for create_csv_table
I will likely move this function to its own file later, but I don't know how to do that efficiently in databricks yet.

--- a/notebooks/Recreate AdventureWorks.ipynb
+++ b/notebooks/Recreate AdventureWorks.ipynb
@@ -67,7 +67,60 @@
     "from pyspark.sql.types import StructType, StructField, IntegerType, StringType, DoubleType, DateType, FloatType\n",
     "import os\n",
     "import requests\n",
-    "import zipfile"
+    "import zipfile\n",
+    "\n",
+    "\n",
+    "def create_csv_table(schema, table_name, df_schema, sep=',', line_sep='\\n', encoding='utf-16'): \n",
+    "    \"\"\"\n",
+    "    Creates a Spark table from a CSV file using the specified schema, file name, and file options.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    schema : str\n",
+    "        The schema name where the table will be created.\n",
+    "    table_name : str\n",
+    "        The name of the table to be created.\n",
+    "    df_schema : StructType\n",
+    "        The schema to apply when reading the CSV file.\n",
+    "    sep : str, optional\n",
+    "        The delimiter to use in the CSV file (default is ',').\n",
+    "    line_sep : str, optional\n",
+    "        The line separator to use in the CSV file (default is '\\n').\n",
+    "    encoding : str, optional\n",
+    "        The encoding of the CSV file (default is 'utf-16').\n",
+    "\n",
+    "    Raises\n",
+    "    ------\n",
+    "    ValueError\n",
+    "        If the row count in the created table does not match the row count in the DataFrame.\n",
+    "    Exception\n",
+    "        If there is an error reading the table or DataFrame.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    None\n",
+    "    \"\"\"\n",
+    "    catalog = 'adventureworks'\n",
+    "    csv_workspace_dir = f'/Volumes/{catalog}/default/csv_files'\n",
+    "\n",
+    "    df = spark.read.csv(f'{csv_workspace_dir}/{table_name}.csv',header=False,schema=df_schema,inferSchema=True,sep='\\t',encoding='utf-16')\n",
+    "    spark.sql(f\"DROP TABLE IF EXISTS {catalog}.{schema}.{table_name.lower()}\")\n",
+    "    df.write.mode('overwrite').saveAsTable(f\"{catalog}.{schema}.{table_name.lower()}\")\n",
+    "    spark.sql(f\"select * from {catalog}.{schema}.{table_name.lower()}\").count() == df.count()   \n",
+    "    \n",
+    "    # Try to read table first.\n",
+    "    try:\n",
+    "        table_count = spark.sql(f\"SELECT COUNT(*) FROM {catalog}.{schema}.{table_name.lower()}\").collect()[0][0]\n",
+    "        df_count = df.count()\n",
+    "    except Exception as e:\n",
+    "        raise e\n",
+    "    \n",
+    "    # Compare row counts, raise error on count mismatch\n",
+    "    if table_count == df_count:\n",
+    "        print(f\"Table {catalog}.{schema}.{table_name.lower()} created successfully\")\n",
+    "    else:\n",
+    "        raise ValueError(f\"Row count mismatch: table={table_count.lower()}, dataframe={df_count}\")\n",
+    "    "
    ]
   },
   {
@@ -255,7 +308,7 @@
     }
    },
    "source": [
-    "### Adding missing files\n",
+    "### Adding missing tables\n",
     "A couple files seem to be missing from the above mentioned parquet dataset. Therefore, I'll be importing the 2022 version of the CSV files from microsoft and add them in as I need more tables for the data warehouse.\n",
     "I've attempted to create these from the provided install scripts inside the zip file provided by microsoft below. "
    ]
@@ -309,6 +362,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "4e0ebd24-d7fc-4fd8-80a2-1a7e5427476e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#### Employee\n",
+    "First up is the employee table. Luckly this one is simple enough with tab seperated columns, and new lines seperating the rows. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -345,7 +415,24 @@
     "    StructField('ModifiedDate', DateType(), True)\n",
     "])\n",
     "\n",
-    "df = spark.read.csv(f'{csv_workspace_dir}/Employee.csv',header=False,schema=df_schema,inferSchema=True,sep='\\t',encoding='utf-16')"
+    "create_csv_table('person', 'Employee', df_schema)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "9d14bd41-0f1f-46db-bff1-e3876bf57482",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#### Address\n",
+    "Next up is the `person.address`. Again, a tab seperated columns with new lines on the rows. Essentially repeating the above. I should consider a function to perform the same steps above over and over again. That can be on the TODO list for future interations of this notebook. "
    ]
   },
   {
@@ -358,7 +445,7 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "a5ac29b6-8ba6-499a-aa94-c6c837214486",
+     "nuid": "2a97ec59-6dca-4c16-905d-8e3db1258114",
      "showTitle": false,
      "tableResultSettingsMap": {},
      "title": ""
@@ -366,49 +453,19 @@
    },
    "outputs": [],
    "source": [
-    "spark.sql(\"DROP TABLE IF EXISTS adventureworks.humanresources.employee\")\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "ea2cc1bb-f4b0-4b5a-9b0c-f7498c687323",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "df.write.mode('overwrite').saveAsTable(\"adventureworks.humanresources.employee\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "39a607d6-3c5e-4efa-896c-d1c3b6f581b0",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "spark.sql(\"select EmployeeID from adventureworks.humanresources.employee\").count() == df.count()"
+    "df_schema = StructType([\n",
+    "    StructField('AddressID', IntegerType(), True),\n",
+    "    StructField('AddressLine1', StringType(), True),\n",
+    "    StructField('AddressLine2', StringType(), True),\n",
+    "    StructField('City', StringType(), True),\n",
+    "    StructField('StateProvinceID', IntegerType(), True),\n",
+    "    StructField('PostalCode', StringType(), True),\n",
+    "    StructField('SpatialLocation', StringType(), True),\n",
+    "    StructField('rowguid', StringType(), True),\n",
+    "    StructField('ModifiedDate', DateType(), True)\n",
+    "])\n",
+    "\n",
+    "create_csv_table('humanresources', 'Address', df_schema)\n"
    ]
   },
   {
