incremental updates to dim_customer

--- a/queries/dim_customer.dbquery.ipynb
+++ b/queries/dim_customer.dbquery.ipynb
@@ -27,15 +27,15 @@
    "source": [
     "-- dim_customer\n",
     "SELECT\n",
-    "  row_number() OVER (ORDER BY LastName, FirstName)\n",
-    "  Title, \n",
-    "  FirstName,\n",
-    "  MiddleName,\n",
-    "  LastName,\n",
-    "  NameStyle,\n",
+    "  -- row_number() OVER (ORDER BY LastName, FirstName),\n",
+    "  p.Title, \n",
+    "  p.FirstName,\n",
+    "  p.MiddleName,\n",
+    "  p.LastName,\n",
+    "  p.NameStyle,\n",
     "  -- as Birth,\n",
     "  -- as MaritalStatus,\n",
-    "  Suffix, \n",
+    "  p.Suffix,\n",
     "  -- as Gender\n",
     "  ea.EmailAddress as EmailAddress,\n",
     "  -- totalChildren,\n",
@@ -50,9 +50,9 @@
     "  -- NumberCarsOwned,\n",
     "  -- AddressLine1,\n",
     "  -- AddressLine2, \n",
-    "  -- Phone,\n",
+    "  pp.PhoneNumber as phone,\n",
     "  -- DateFirstPurchase,\n",
-    "  concat(\n",
+    "  concat( 0\n",
     "    -- CASE \n",
     "    --   WHEN \"column\" BETWEEN 0 AND 1 THEN '0-1'\n",
     "    --   WHEN \"column\" BETWEEN 1 AND 2 THEN '1-2'\n",
@@ -60,13 +60,16 @@
     "    --   WHEN \"column\" BETWEEN 5 AND 10 THEN '5-10'\n",
     "    --   ELSE '10+'\n",
     "    -- END,\n",
-    "    \" Miles\"\n",
+    "  --   \" Miles\"\n",
     "  ) AS CommuteDistance\n",
     "FROM \n",
-    "  adventureworks.person.person AS p\n",
+    "  adventureworks.sales.customer AS c\n",
+    "  JOIN adventureworks.person.person AS p on c.PersonID = p.BusinessEntityID\n",
     "  JOIN adventureworks.person.emailaddress AS ea ON p.BusinessEntityID = ea.BusinessEntityID\n",
-    "ORDER BY\n",
-    "  LastName, FirstName"
+    "  JOIN adventureworks.person.personphone AS pp ON p.BusinessEntityID = pp.BusinessEntityID\n",
+    "  JOIN adventureworks.person.a\n",
+    "-- ORDER BY\n",
+    "  -- LastName, FirstName"
    ]
   }
  ],
