--- a/notebooks/Recreate AdventureWorks.ipynb
+++ b/notebooks/Recreate AdventureWorks.ipynb
@@ -43,7 +43,14 @@
    },
    "source": [
     "## Initial Setup\n",
-    "We start with importing all the libraries we are going to need for this script and ensure we are using the correct catalog. "
+    "We start with importing all the libraries we are going to need for this script and set up a common funciton used for creating tables from CSV files as needed. \n",
+    "\n",
+    "Specifically, we use \n",
+    "* `requests` to download files from GitHub \n",
+    "* `zipfile` to unpack the zip files we downloaded\n",
+    "* and various classes from `pyspark.sql.types` to define the `StructType` which gets passed the PySpark method to read csv. This object allows us to define both the column names and types when reading csv files to avoid ambiguity. \n",
+    "\n",
+    "We also define the `create_csv_table` to combine the shared logic needed for all CSV files that need to be read in. "
    ]
   },
   {
@@ -65,7 +72,6 @@
    "outputs": [],
    "source": [
     "from pyspark.sql.types import StructType, StructField, IntegerType, StringType, DoubleType, DateType, FloatType\n",
-    "import os\n",
     "import requests\n",
     "import zipfile\n",
     "\n",
@@ -345,7 +351,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "3f3e0277-8242-4ea6-9600-48fb5ba32f8d",
      "showTitle": false,
@@ -365,7 +374,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "4e0ebd24-d7fc-4fd8-80a2-1a7e5427476e",
      "showTitle": false,
@@ -422,7 +434,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "9d14bd41-0f1f-46db-bff1-e3876bf57482",
      "showTitle": false,
@@ -506,7 +521,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 5041068088577523,
+     "commandId": 4862064725444785,
      "dataframes": [
       "_sqldf"
      ]
