--- a/queries/dim_employee.dbquery.ipynb
+++ b/queries/dim_employee.dbquery.ipynb
@@ -87,7 +87,7 @@
     "pythonIndentUnit": 4,
     "sqlQueryOptions": {
      "applyAutoLimit": true,
-     "catalog": "adventureworksdatawarehouse",
+     "catalog": "workspace",
      "schema": "default"
     }
    },
