fixed a couple errors

--- a/notebooks/Recreate AdventureWorks.ipynb
+++ b/notebooks/Recreate AdventureWorks.ipynb
@@ -112,7 +112,7 @@
     "    df = spark.read.csv(f'{csv_workspace_dir}/{table_name}.csv',header=False,schema=df_schema,inferSchema=True,sep='\\t',encoding='utf-16')\n",
     "    spark.sql(f\"DROP TABLE IF EXISTS {catalog}.{schema}.{table_name.lower()}\")\n",
     "    df.write.mode('overwrite').saveAsTable(f\"{catalog}.{schema}.{table_name.lower()}\")\n",
-    "    spark.sql(f\"select * from {catalog}.{schema}.{table_name.lower()}\").count() == df.count()   \n",
+    "    # spark.sql(f\"select * from {catalog}.{schema}.{table_name.lower()}\").count() == df.count()   \n",
     "    \n",
     "    # Try to read table first.\n",
     "    try:\n",
@@ -427,7 +427,7 @@
     "    StructField('ModifiedDate', DateType(), True)\n",
     "])\n",
     "\n",
-    "create_csv_table('person', 'Employee', df_schema)"
+    "create_csv_table('humanresources', 'Employee', df_schema)"
    ]
   },
   {
@@ -480,7 +480,7 @@
     "    StructField('ModifiedDate', DateType(), True)\n",
     "])\n",
     "\n",
-    "create_csv_table('humanresources', 'Address', df_schema)\n"
+    "create_csv_table('person', 'Address', df_schema)\n"
    ]
   },
   {
@@ -521,7 +521,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 4862064725444785,
+     "commandId": 5457683220597457,
      "dataframes": [
       "_sqldf"
      ]
